<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Football Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading. Please wait...</string>
    <string name="drawer">Drawer</string>
    <string name="main">Main</string>
    <string name="title_activity_team_selector">TeamSelectorActivity</string>
    <string name="title_activity_league_selector">LeagueSelectorActivity</string>
    <string name="title_activity_premier">PremierActivity</string>
    <string name="title_activity_liga">LigaActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="team_select">Select your team:</string>
    <string name="team_augsburg">FC Augsburg</string>
    <string name="team_leverkusen">Bayer Leverkusen</string>
    <string name="team_bayern">Bayern Munich</string>
    <string name="team_dortmund">Borussia Dortmund</string>
    <string name="team_gladbach">Borussia Monchengladbach</string>
    <string name="team_frankfurt">Eintracht Frankfurt</string>
    <string name="team_freiburg">SC Freiburg</string>
    <string name="team_hamburger">Hamburger SV</string>
    <string name="team_hannover">Hannover 96</string>
    <string name="team_hertha">Hertha BSC</string>
    <string name="team_hoffenheim">TSG 1899 Hoffenheim</string>
    <string name="team_koeln">1. FC Koln</string>
    <string name="team_mainz">FSV Mainz 05</string>
    <string name="team_paderborn">SC Paderborn 07</string>
    <string name="team_schalke">Schalke 04</string>
    <string name="team_stuttgart">VfB Stuttgart</string>
    <string name="team_bremen">Werder Bremen</string>
    <string name="team_wolfsburg">VfL Wolfsburg</string>
    <string name="league_select">Select a league:</string>
    <string name="league_bundesliga">Bundesliga</string>
    <string name="league_liga">La Liga</string>
    <string name="league_premier">Premier League</string>
    <string name="team_almeria">Almería</string>
    <string name="team_bilbao">Athletic Bilbao</string>
    <string name="team_atletico">Atlético Madrid</string>
    <string name="team_barcelona">Barcelona</string>
    <string name="team_celta">Celta de Vigo</string>
    <string name="team_cordoba">Córdoba</string>
    <string name="team_coruna">Deportivo la Coruña</string>
    <string name="team_eibar">Eibar</string>
    <string name="team_elche">Elche</string>
    <string name="team_espanyol">Espanyol</string>
    <string name="team_getafe">Getafe</string>
    <string name="team_granada">Granada</string>
    <string name="team_levante">Levante</string>
    <string name="team_malaga">Málaga</string>
    <string name="team_rayo">Rayo Vallecano</string>
    <string name="team_madrid">Real Madrid</string>
    <string name="team_sociedad">Real Sociedad</string>
    <string name="team_sevilla">Sevilla</string>
    <string name="team_valencia">Valencia</string>
    <string name="team_villareal">Villareal</string>
    <string name="menu">Menu</string>
    <string name="drawer_team">Settings</string>
    <string name="team_icon_alt">team_select_icon</string>
    <string name="team_arsenal">Arsenal</string>
    <string name="team_aston">Aston Villa</string>
    <string name="team_burnley">Burnley</string>
    <string name="team_chelsea">Chelsea</string>
    <string name="team_palace">Crystal Palace</string>
    <string name="team_everton">Everton</string>
    <string name="team_hull">Hull City</string>
    <string name="team_leicester">Leicester City</string>
    <string name="team_liverpool">Liverpool</string>
    <string name="ream_mancity">Manchester City</string>
    <string name="team_manutd">Manchester United</string>
    <string name="team_newcastle">Newcastle United</string>
    <string name="team_qpr">Queens Park Rangers</string>
    <string name="team_southampton">Southampton</string>
    <string name="team_stoke">Stoke City</string>
    <string name="team_sunderland">Sunderland</string>
    <string name="team_swansea">Swansea City</string>
    <string name="team_tottenham">Tottenham Hotspur</string>
    <string name="team_westbrom">West Bromwich Albion</string>
    <string name="team_westham">West Ham United</string>
    <string name="title_activity_gif">GifActivity</string>
    <string name="play_icon">Play Icon</string>
    <string name="highlights_text">Highlights</string>
    <string name="text_fixture">Fixture</string>
    <string name="team_select_text">Select a team</string>
    <string name="highlight_max_selector_text">Set number of highlights to display</string>
    <string name="highlight_limit">Highlight Limit</string>
    <string name="pref_highlight_number">5</string>
    <string name="refresh_fixture_text">Refresh fixture</string>
    <string name="refresh_highlight_text">Refresh highlights</string>

</resources>
