<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/selector_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"/>

    <TextView
        android:id="@+id/loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:paddingTop="25dp"
        android:text="@string/team_select" />

    <ScrollView
        android:id="@+id/scrollview_choices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:fillViewport="true"
        android:layout_below="@id/loading_text"
        >

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:orientation="vertical"
            >
            <RadioButton android:id="@+id/radio_almeria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_almeria"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_bilbao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_bilbao"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_atletico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_atletico"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_barcelona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_barcelona"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_celta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_celta"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_cordoba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_cordoba"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_deportivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_coruna"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_eibar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_eibar"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_elche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_elche"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_espanyol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_espanyol"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_getafe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_getafe"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_granada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_granada"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_levante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_levante"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_malaga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_malaga"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_vallecano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_rayo"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_madrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_madrid"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_sociedad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_sociedad"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_sevilla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_sevilla"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_valencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_valencia"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_villareal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_villareal"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

    </ScrollView>


</LinearLayout>