<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/selector_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"/>

    <TextView
        android:id="@+id/loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:paddingTop="25dp"
        android:text="@string/team_select" />

    <ScrollView
        android:id="@+id/scrollview_choices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:fillViewport="true"
        android:layout_below="@id/loading_text"
        >

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:orientation="vertical"
            >
            <RadioButton android:id="@+id/radio_arsenal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_arsenal"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_aston"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_aston"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_burnley"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_burnley"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_chelsea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_chelsea"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_palace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_palace"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_everton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_everton"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_hull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_hull"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_leicester"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_leicester"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_liverpool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_liverpool"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ream_mancity"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_manu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_manutd"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_newcastle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_newcastle"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_qpr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_qpr"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_southampton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_southampton"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_stoke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_stoke"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_sunderland"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_sunderland"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_swansea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_swansea"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_tottenham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_tottenham"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_westbrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_westbrom"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_westham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_westham"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

    </ScrollView>


</LinearLayout>