<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/selector_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"/>

    <TextView
        android:id="@+id/loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:paddingTop="25dp"
        android:text="@string/team_select" />

    <ScrollView
        android:id="@+id/scrollview_choices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:fillViewport="true"
        android:layout_below="@id/loading_text"
        >

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:orientation="vertical"
            >
            <RadioButton android:id="@+id/radio_augsburg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_augsburg"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_leverkusen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_leverkusen"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_bayern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_bayern"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_dortmund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_dortmund"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_gladbach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_gladbach"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_frankfurt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_frankfurt"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_freiburg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_freiburg"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_hamburger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_hamburger"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_hannover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_hannover"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_hertha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_hertha"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_hoffenheim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_hoffenheim"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_koln"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_koeln"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_mainz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_mainz"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_paderborn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_paderborn"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_schalke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_schalke"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_stuttgart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_stuttgart"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_bremen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_bremen"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_wolfsburg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_wolfsburg"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

    </ScrollView>


</LinearLayout>