<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gif_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HighlightActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        >

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/gif_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryDark"/>

        <TextView
            android:id="@+id/gif_loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:paddingTop="50dp"
            android:text="@string/loading" />

        <ProgressBar
            android:id="@+id/gif_progbar"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            style="@android:style/Widget.ProgressBar.Large"
            android:layout_height="200dp" />

        <!-- A RecyclerView with some commonly used attributes -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/gif_recycler"
            android:scrollbars="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frame"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:clickable="true"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="@color/orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/menu"
                android:paddingTop="5dp"
                android:paddingLeft="25dp"
                android:textAlignment="center"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fixtureButton"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="onFixtureClick"
            android:clickable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/team_icon_alt"
                android:paddingLeft="2dp"
                android:src="@drawable/ic_team_select"/>

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/text_fixture"
                android:paddingTop="5dp"
                android:paddingLeft="23dp"
                android:textAlignment="center"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/highlightButton"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="onHighlightClick"
            android:clickable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/play_icon"
                android:paddingLeft="2dp"
                android:src="@drawable/ic_play_icon"/>

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/highlights_text"
                android:paddingTop="5dp"
                android:paddingLeft="23dp"
                android:textAlignment="center"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="onSelectorClick"
            android:clickable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/team_select_text"
                android:paddingLeft="2dp"
                android:src="@drawable/ic_settings"/>

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/drawer_team"
                android:paddingTop="5dp"
                android:paddingLeft="23dp"
                android:textAlignment="center"
                android:gravity="center"
                />
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>